test: add unit tests for added features

--- a/UnitTest/Extensions.Common.UnitTest.csproj
+++ b/UnitTest/Extensions.Common.UnitTest.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>Ichosoft.Extensions.Common.UnitTest</AssemblyName>
+
+    <RootNamespace>Ichosoft.Extensions.Common.UnitTest</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
