build: update target framework and publish settings

--- a/Extensions.Common/Extensions.Common.csproj
+++ b/Extensions.Common/Extensions.Common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <AssemblyName>Ichosys.Extensions.Common</AssemblyName>
         <RootNamespace>Ichosys.Extensions.Common</RootNamespace>
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
@@ -14,16 +14,16 @@
         <Authors>hoeyi</Authors>
         <Company>hoeyi</Company>
         <Product>Ichosys.Extensions.Common</Product>
-        <VersionPrefix>1.4.0</VersionPrefix>
+        <VersionPrefix>1.5.0</VersionPrefix>
         <Version>$(VersionPrefix).$(BuildNumber)</Version>
         <Description>Extension methods for commonly-used types in .NET, primarily for types in the System namespace.</Description>
         <Copyright>2021 ihoey</Copyright>
-        <PackageProjectUrl>https://github.com/Ichosys/Extensions.Common</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/hoeyi/Extensions.Common</PackageProjectUrl>
         <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
         
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
         <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
