build: add back commented line for incrementing build number

--- a/Extensions.Common/Extensions.Common.csproj
+++ b/Extensions.Common/Extensions.Common.csproj
@@ -9,8 +9,7 @@
 
         <PackageId>Ichosys.Extensions.Common</PackageId>
         <BuildNumber Condition="$(BuildNumber) == ''">0</BuildNumber>
-        <!--Comment out build number to avoid auto-updating project build properties. Uncomment for release builds only.-->
-        <!--<BuildNumber>$([System.DateTime]::UtcNow.ToString(mmff))</BuildNumber>-->
+        <BuildNumber>$([System.DateTime]::UtcNow.ToString(mmff))</BuildNumber>
         <Authors>hoeyi</Authors>
         <Company>hoeyi</Company>
         <Product>Ichosys.Extensions.Common</Product>
